# siprtsp

./: .gitignore  CMakeLists.txt  README.md  device.txt  fifo_mic_test.py  index.py  isok.py  list_all_audio_device.py  list_audio_devices.cpp  oldCode.py  rtsp_proxy_with_noise.py  setup_rtsp_audio.cpp  setup_rtsp_audio.sh  sip_client.cpp
